--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Google Search</title>        
-        <link rel="stylesheet" href="style.css">        
-    </head>    
-    <body>
-        <div id=""topmenu>
-            <ul id="menu">
-                <!-- <li><a href="index.html">Google Search</a></li>-->
-                <li><a href="gimage.html"> Google Image Search</a></li>
-                <li><a href="advanced_search.html"> Google Advanced Search</a></li>
-            </ul>
+  <head>
+    <title>Google Search</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="" topmenu>
+      <ul id="menu">
+        <!-- <li><a href="index.html">Google Search</a></li>-->
+        <li><a href="gimage.html"> Google Image Search</a></li>
+        <li><a href="advanced_search.html"> Google Advanced Search</a></li>
+      </ul>
+    </div>
+    <div class="o3j99 ikrT4e om7nvf">
+      <form action="https://google.com/search">
+        <div id="search">
+          <div><input class="input type="text" name="q"></div>
         </div>
-        <form action="https://google.com/search"></form>
-            <div id="search">
-                <div>
-                    <input class="input type="text" name="q">                                        
-                </div>
-            </div>    
-            <input type="submit" value="Google Search">    
-        </form>                            
-    </body>
+        <div class="FPdoLc lJ9FBc">
+          <center>
+            <input
+              class="gNO89b"
+              value="Google Search"
+              aria-label="Google Search"
+              name="btnK"
+              role="button"
+              tabindex="0"
+              type="submit"
+              data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q4dUDCA0"
+            />
+            <input
+              class="RNmpXc"
+              value="I'm Feeling Lucky"
+              aria-label="I'm Feeling Lucky"
+              name="btnI"
+              type="submit"
+              jsaction="trigger.kWlxhc"
+              data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q19QECA4"
+            />
+          </center>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
