adding google logo and more styles

--- a/advanced_search.html
+++ b/advanced_search.html
@@ -1,27 +1,48 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Google Advanced Search</title>
-    </head>
-    <style>
-        ul#menu li{
-            display: inline;
-            float: right;
-            padding-right: 5px;
-        }
-    </style>
-    <body>
-        <ul id="menu">
-            <li><a href="index.html">Back to Google Search</a></li>-->
-            <!-- <li><a href="gimage.html"> Google Image Search</a></li> -->
-            <!-- <li><a href="advanced_search.html"> Google Advanced Search</a></li> -->
-        </ul>
-        <div id="search"">
-            <form action="https://google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
-            </form>
+  <head>
+    <title>Google Advanced Search</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="o3j99 n1xJcf Ne6nSd">
+      <div class="LX3sZb">
+        <div class="gb_Wd gb_Za gb_Ld">
+          <ul id="menu">
+            <li><a href="index.html">Back to Google Search</a></li>
+          </ul>
         </div>
-    </body>
+      </div>
+    </div>
+    <div class="o3j99 ikrT4e om7nvf">
+      <form action="https://google.com/search" method="get" role="search">
+        <div id="search">
+          <div><input class="input type="text" name="q"></div>
+        </div>
+        <div class="FPdoLc lJ9FBc">
+          <center>
+            <input
+              class="gNO89b"
+              value="Google Search"
+              aria-label="Google Search"
+              name="btnK"
+              role="button"
+              tabindex="0"
+              type="submit"
+              data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q4dUDCA0"
+            />
+            <input
+              class="RNmpXc"
+              value="I'm Feeling Lucky"
+              aria-label="I'm Feeling Lucky"
+              name="btnI"
+              type="submit"
+              jsaction="trigger.kWlxhc"
+              data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q19QECA4"
+            />
+          </center>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
