--- a/gimage.html
+++ b/gimage.html
@@ -1,27 +1,96 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Google Image Search</title>
-    </head>
-    <style>
-        ul#menu li{
-            display: inline;
-            float: right;
-            padding-right: 5px;
-        }
-    </style>
-    <body>
-        <ul id="menu">
-            <li><a href="index.html">Back to Google Search</a></li>-->
-            <!-- <li><a href="gimage.html"> Google Image Search</a></li> -->
-            <!-- <li><a href="advanced_search.html"> Google Advanced Search</a></li> -->
-        </ul>
-        <div id="search"">
-            <form action="https://google.com/search">
-                <input type="text" name="q">
-                <input type="submit" value="Google Search">
-            </form>
+  <head>
+    <title>Google Image Search</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="o3j99 n1xJcf Ne6nSd">
+      <div class="LX3sZb">
+        <div class="gb_Wd gb_Za gb_Ld">
+          <ul id="menu">
+            <li><a href="index.html">Back to Google Search</a></li>
+          </ul>
         </div>
-    </body>
+      </div>
+    </div>
+    <div class="o3j99 LLD4me yr19Zb LS8OJ">
+      <style data-iml="1652472458012">
+        .LS8OJ {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+        .k1zIA {
+          height: 100%;
+          margin-top: auto;
+        }
+      </style>
+      <div class="k1zIA rSk4se">
+        <style data-iml="1652472458012">
+          .rSk4se {
+            max-height: 92px;
+            position: relative;
+          }
+          .lnXdpd {
+            max-height: 100%;
+            max-width: 100%;
+            object-fit: contain;
+            object-position: center bottom;
+            width: auto;
+          }</style
+        ><img
+          class="lnXdpd"
+          alt="Google Images"
+          height="92"
+          src="img/googlelogo_color_272x92dp.png"
+          srcset="
+            img/googlelogo_color_272x92dp.png 1x,
+            img/googlelogo_color_272x92dp.png 2x
+          "
+          width="272"
+          data-iml="1652472458012"
+        /><style data-iml="1652472458012">
+          .T8VaVe {
+            color: #4285f4;
+            font: 16px/16px roboto-regular, arial, sans-serif;
+            position: absolute;
+            left: 215px;
+            bottom: 0;
+            white-space: nowrap;
+          }</style
+        ><span class="T8VaVe">images</span>
+      </div>
+    </div>
+    <div class="o3j99 ikrT4e om7nvf">
+      <form action="http://images.google.com/images" method="GET" role="search">
+        <div id="search">
+          <div><input class="input type="text" name="q"></div>
+        </div>
+        <div class="FPdoLc lJ9FBc">
+          <center>
+            <input
+              class="gNO89b"
+              value="Google Search"
+              aria-label="Google Search"
+              name="btnK"
+              role="button"
+              tabindex="0"
+              type="submit"
+              data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q4dUDCA0"
+            />
+            <input
+              class="RNmpXc"
+              value="I'm Feeling Lucky"
+              aria-label="I'm Feeling Lucky"
+              name="btnI"
+              type="submit"
+              jsaction="trigger.kWlxhc"
+              data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q19QECA4"
+            />
+          </center>
+        </div>
+      </form>
+    </div>
+  </body>
 </html>
