--- a/index.html
+++ b/index.html
@@ -3,17 +3,75 @@
   <head>
     <title>Google Search</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div id="" topmenu>
-      <ul id="menu">
-        <!-- <li><a href="index.html">Google Search</a></li>-->
-        <li><a href="gimage.html"> Google Image Search</a></li>
-        <li><a href="advanced_search.html"> Google Advanced Search</a></li>
-      </ul>
+    <div class="o3j99 n1xJcf Ne6nSd">
+      <div class="LX3sZb">
+        <div class="gb_Wd gb_Za gb_Ld">
+          <ul id="menu">
+            <!-- <li><a href="index.html">Google Search</a></li>-->
+            <li><a href="gimage.html"> Google Image Search</a></li>
+            <li><a href="advanced_search.html"> Google Advanced Search</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="o3j99 LLD4me yr19Zb LS8OJ">
+      <style data-iml="1652472458012">
+        .LS8OJ {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+        .k1zIA {
+          height: 100%;
+          margin-top: auto;
+        }
+      </style>
+      <div class="k1zIA rSk4se">
+        <style data-iml="1652472458012">
+          .rSk4se {
+            max-height: 92px;
+            position: relative;
+          }
+          .lnXdpd {
+            max-height: 100%;
+            max-width: 100%;
+            object-fit: contain;
+            object-position: center bottom;
+            width: auto;
+          }</style
+        ><img
+          class="lnXdpd"
+          alt="Google Images"
+          height="92"
+          src="img/googlelogo_color_272x92dp.png"
+          srcset="
+            img/googlelogo_color_272x92dp.png 1x,
+            img/googlelogo_color_272x92dp.png 2x
+          "
+          width="272"
+          data-iml="1652472458012"
+        /><style data-iml="1652472458012">
+          .T8VaVe {
+            color: #4285f4;
+            font: 16px/16px roboto-regular, arial, sans-serif;
+            position: absolute;
+            left: 215px;
+            bottom: 0;
+            white-space: nowrap;
+          }
+        </style>
+      </div>
     </div>
     <div class="o3j99 ikrT4e om7nvf">
-      <form action="https://google.com/search">
+      <form action="https://google.com/search" method="get" role="search">
         <div id="search">
           <div><input class="input type="text" name="q"></div>
         </div>
@@ -30,6 +88,12 @@
               data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q4dUDCA0"
             />
             <input
+              type="submit"
+              name="btnI"
+              value="I am Feeling Lucky"
+              class="button"
+            />
+            <!-- <input
               class="RNmpXc"
               value="I'm Feeling Lucky"
               aria-label="I'm Feeling Lucky"
@@ -37,7 +101,7 @@
               type="submit"
               jsaction="trigger.kWlxhc"
               data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q19QECA4"
-            />
+            /> -->
           </center>
         </div>
       </form>
