--- a/gimage.html
+++ b/gimage.html
@@ -3,6 +3,12 @@
   <head>
     <title>Google Image Search</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="o3j99 n1xJcf Ne6nSd">
@@ -15,31 +21,8 @@
       </div>
     </div>
     <div class="o3j99 LLD4me yr19Zb LS8OJ">
-      <style data-iml="1652472458012">
-        .LS8OJ {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-        }
-        .k1zIA {
-          height: 100%;
-          margin-top: auto;
-        }
-      </style>
       <div class="k1zIA rSk4se">
-        <style data-iml="1652472458012">
-          .rSk4se {
-            max-height: 92px;
-            position: relative;
-          }
-          .lnXdpd {
-            max-height: 100%;
-            max-width: 100%;
-            object-fit: contain;
-            object-position: center bottom;
-            width: auto;
-          }</style
-        ><img
+        <img
           class="lnXdpd"
           alt="Google Images"
           height="92"
@@ -50,36 +33,28 @@
           "
           width="272"
           data-iml="1652472458012"
-        /><style data-iml="1652472458012">
-          .T8VaVe {
-            color: #4285f4;
-            font: 16px/16px roboto-regular, arial, sans-serif;
-            position: absolute;
-            left: 215px;
-            bottom: 0;
-            white-space: nowrap;
-          }</style
-        ><span class="T8VaVe">images</span>
+        />
+        <span class="T8VaVe">images</span>
       </div>
     </div>
     <div class="o3j99 ikrT4e om7nvf">
       <form action="http://images.google.com/images" method="GET" role="search">
         <div id="search">
-          <div><input class="input type="text" name="q"></div>
+          <div><input class="input" type="text" name="q" /></div>
         </div>
         <div class="FPdoLc lJ9FBc">
           <center>
             <input
               class="gNO89b"
-              value="Google Search"
-              aria-label="Google Search"
+              value="Google Image Search"
+              aria-label="Google Image Search"
               name="btnK"
               role="button"
               tabindex="0"
               type="submit"
               data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q4dUDCA0"
             />
-            <input
+            <!-- <input
               class="RNmpXc"
               value="I'm Feeling Lucky"
               aria-label="I'm Feeling Lucky"
@@ -87,7 +62,7 @@
               type="submit"
               jsaction="trigger.kWlxhc"
               data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q19QECA4"
-            />
+            /> -->
           </center>
         </div>
       </form>
