--- a/advanced_search.html
+++ b/advanced_search.html
@@ -3,6 +3,12 @@
   <head>
     <title>Google Advanced Search</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <div class="o3j99 n1xJcf Ne6nSd">
@@ -14,7 +20,42 @@
         </div>
       </div>
     </div>
-    <div class="o3j99 ikrT4e om7nvf">
+    <div class="container">
+      <div class="appbar">
+        <label style="margin-left: 10px">Advanced Search</label>
+      </div>
+      <form
+        action="https://www.google.com/search"
+        class="form-horizontal"
+        method="GET"
+        name="f"
+      >
+        <div class="form-group">
+          <label for="as_q">all these words:</label>
+          <input type="text" class="form-control" id="as_q" name="as_q" />
+        </div>
+        <div class="form-group">
+          <label for="as_epq">this exact word or phrase:</label>
+          <input type="text" class="form-control" id="as_epq" name="as_epq" />
+        </div>
+        <div class="form-group">
+          <label for="as_oq">any of these words:</label>
+          <input type="text" class="form-control" id="as_oq" name="as_oq" />
+        </div>
+        <div class="form-group">
+          <label for="as_eq">none of these words:</label>
+          <input type="text" class="form-control" id="as_eq" name="as_eq" />
+        </div>
+        <div class="form-group row">
+          <div class="col-sm-10">
+            <button type="submit" class="btn btn-primary">
+              Advanced Search
+            </button>
+          </div>
+        </div>
+      </form>
+    </div>
+    <!-- <div class="o3j99 ikrT4e om7nvf">
       <form action="https://google.com/search" method="get" role="search">
         <div id="search">
           <div><input class="input type="text" name="q"></div>
@@ -43,6 +84,6 @@
           </center>
         </div>
       </form>
-    </div>
+    </div> -->
   </body>
 </html>
