--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
       integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"
+    />
   </head>
   <body>
+    <!-- top menu -->
     <div class="o3j99 n1xJcf Ne6nSd">
       <div class="LX3sZb">
         <div class="gb_Wd gb_Za gb_Ld">
@@ -22,32 +31,10 @@
         </div>
       </div>
     </div>
+    <!-- end of top menu -->
     <div class="o3j99 LLD4me yr19Zb LS8OJ">
-      <style data-iml="1652472458012">
-        .LS8OJ {
-          display: flex;
-          flex-direction: column;
-          align-items: center;
-        }
-        .k1zIA {
-          height: 100%;
-          margin-top: auto;
-        }
-      </style>
       <div class="k1zIA rSk4se">
-        <style data-iml="1652472458012">
-          .rSk4se {
-            max-height: 92px;
-            position: relative;
-          }
-          .lnXdpd {
-            max-height: 100%;
-            max-width: 100%;
-            object-fit: contain;
-            object-position: center bottom;
-            width: auto;
-          }</style
-        ><img
+        <img
           class="lnXdpd"
           alt="Google Images"
           height="92"
@@ -58,22 +45,13 @@
           "
           width="272"
           data-iml="1652472458012"
-        /><style data-iml="1652472458012">
-          .T8VaVe {
-            color: #4285f4;
-            font: 16px/16px roboto-regular, arial, sans-serif;
-            position: absolute;
-            left: 215px;
-            bottom: 0;
-            white-space: nowrap;
-          }
-        </style>
+        />
       </div>
     </div>
     <div class="o3j99 ikrT4e om7nvf">
       <form action="https://google.com/search" method="get" role="search">
         <div id="search">
-          <div><input class="input type="text" name="q"></div>
+          <div><input class="input" type="text" name="q" /></div>
         </div>
         <div class="FPdoLc lJ9FBc">
           <center>
@@ -93,18 +71,51 @@
               value="I am Feeling Lucky"
               class="button"
             />
-            <!-- <input
-              class="RNmpXc"
-              value="I'm Feeling Lucky"
-              aria-label="I'm Feeling Lucky"
-              name="btnI"
-              type="submit"
-              jsaction="trigger.kWlxhc"
-              data-ved="0ahUKEwje0MuN6Nz3AhV1sDEKHdpEBM4Q19QECA4"
-            /> -->
           </center>
         </div>
       </form>
     </div>
+    <!-- <div class="container d-flex justify-content-center">
+      <form
+        id="mainform"
+        action="https://google.com/search"
+        method="get"
+        role="search"
+      >
+        <div class="input-group col-sm-7 input-group-lg">
+          <div class="input-group-prepend">
+            <span class="input-group-text google"
+              ><img
+                src="https://img.icons8.com/color/48/000000/google-logo.png"
+            /></span>
+          </div>
+          <input type="text" class="form-control" name="q" />
+          <div class="input-group-append">
+            <span class="input-group-text microphone"
+              ><img src="https://img.icons8.com/nolan/48/000000/microphone.png"
+            /></span>
+          </div>
+        </div>
+        <div class="FPdoLc lJ9FBc">
+          <center>
+            <input
+              class="gNO89b"
+              value="Google Search"
+              aria-label="Google Search"
+              name="btnK"
+              role="button"
+              tabindex="0"
+              type="submit"
+            />
+            <input
+              type="submit"
+              name="btnI"
+              value="I am Feeling Lucky"
+              class="button"
+            />
+          </center>
+        </div>
+      </form>
+    </div> -->
   </body>
 </html>
