--- a/advanced_search.html
+++ b/advanced_search.html
@@ -12,6 +12,17 @@
   </head>
   <body>
     <div class="o3j99 n1xJcf Ne6nSd">
+      <div class="gb_rc">
+        <div class="gb_sc">
+          <a
+            class="gb_ie gb_tc"
+            aria-label="Go to Google Home"
+            href="index.html"
+            title="Go to Google Home"
+            ><span class="gb_xc gb_fe" aria-hidden="true"></span
+          ></a>
+        </div>
+      </div>
       <div class="LX3sZb">
         <div class="gb_Wd gb_Za gb_Ld">
           <ul id="menu">
@@ -30,21 +41,105 @@
         method="GET"
         name="f"
       >
-        <div class="form-group">
-          <label for="as_q">all these words:</label>
-          <input type="text" class="form-control" id="as_q" name="as_q" />
-        </div>
-        <div class="form-group">
-          <label for="as_epq">this exact word or phrase:</label>
-          <input type="text" class="form-control" id="as_epq" name="as_epq" />
-        </div>
-        <div class="form-group">
-          <label for="as_oq">any of these words:</label>
-          <input type="text" class="form-control" id="as_oq" name="as_oq" />
-        </div>
-        <div class="form-group">
-          <label for="as_eq">none of these words:</label>
-          <input type="text" class="form-control" id="as_eq" name="as_eq" />
+        <div class="otByu">
+          <div class="yIQOUb">
+            <div class="FAcADc">
+              <div class="lOTAE">
+                <label for="xX4UFf">all these words:</label>
+              </div>
+            </div>
+            <div class="jYcx0e">
+              <div class="PLLUQc">
+                <input
+                  class="jfk-textinput"
+                  value=""
+                  autofocus="autofocus"
+                  id="xX4UFf"
+                  name="as_q"
+                  type="text"
+                />
+              </div>
+            </div>
+            <div class="cwqNnb dulCv">
+              <div class="lOTAE">
+                Type the important words:
+                <span class="BFlQMb">tri-colour rat terrier</span>
+              </div>
+            </div>
+          </div>
+          <div class="yIQOUb">
+            <div class="FAcADc">
+              <div class="lOTAE">
+                <label for="CwYCWc">this exact word or phrase:</label>
+              </div>
+            </div>
+            <div class="jYcx0e">
+              <div class="PLLUQc">
+                <input
+                  class="jfk-textinput"
+                  value=""
+                  id="CwYCWc"
+                  name="as_epq"
+                  type="text"
+                />
+              </div>
+            </div>
+            <div class="cwqNnb dulCv">
+              <div class="lOTAE">
+                Put exact words in quotes:
+                <span class="BFlQMb">"rat terrier"</span>
+              </div>
+            </div>
+          </div>
+          <div class="yIQOUb">
+            <div class="FAcADc">
+              <div class="lOTAE">
+                <label for="mSoczb">any of these words:</label>
+              </div>
+            </div>
+            <div class="jYcx0e">
+              <div class="PLLUQc">
+                <input
+                  class="jfk-textinput"
+                  value=""
+                  id="mSoczb"
+                  name="as_oq"
+                  type="text"
+                />
+              </div>
+            </div>
+            <div class="cwqNnb dulCv">
+              <div class="lOTAE">
+                Type <span class="BFlQMb">OR</span> between all the words you
+                want: <span class="BFlQMb">miniature OR standard</span>
+              </div>
+            </div>
+          </div>
+          <div class="yIQOUb">
+            <div class="FAcADc">
+              <div class="lOTAE">
+                <label for="t2dX1c">none of these words:</label>
+              </div>
+            </div>
+            <div class="jYcx0e">
+              <div class="PLLUQc">
+                <input
+                  class="jfk-textinput"
+                  value=""
+                  id="t2dX1c"
+                  name="as_eq"
+                  type="text"
+                />
+              </div>
+            </div>
+            <div class="cwqNnb dulCv">
+              <div class="lOTAE">
+                Put a minus sign just before words that you don't want:
+                <span class="BFlQMb">-rodent, -"Jack Russell"</span>
+              </div>
+            </div>
+          </div>
+          <div class="yIQOUb"></div>
         </div>
         <div class="form-group row">
           <div class="col-sm-10">
